# eyelandmarks

./: .gitignore  LICENSE  pyproject.toml
config/: all_base_mac.yml
src/eyelandmarks/: cli.py  data.py  models.py  modules.py
src/eyelandmarks/util/: callbacks.py  geometry.py
